Hide navbar when in search ui, show company name in search box when loading, fix overflow on home

--- a/static/home.css
+++ b/static/home.css
@@ -44,5 +44,5 @@ header > a {
 }
 
 #search-popup {
-  transition: opacity 0.2s ease-in-out 0.2s;
+  transition: opacity 0.2s ease-in-out;
 }
